Add hello and agile practices posts

--- a/_posts/2020-08-19-hello.md
+++ b/_posts/2020-08-19-hello.md
@@ -6,3 +6,15 @@ tags: []
 ---
 
 Hello, world!
+
+Thank you for visiting my site!
+
+I'm currently working as a software delivery manager [^1], having fully transitioned over from software engineer/architect roles. A "well-seasoned newcomer" to the management side of project delivery, I've now reached the point where I'm finding myself constantly inspired with tough questions (and ocassionally, answers!), and so I've decided to use this blog as a place to nail down all my thoughts, publicly for whoever cares to read them. 
+
+My burning questions typically revolve around *practical* agile/lean project delivery, particularly in the hostile and unforgiving enterprise space.
+
+I'm still keeping my software developer spirit close, so expect a few stray technical posts as well.
+
+I always love having discussions, so please feel free to hit me up on LinkedIn or via a comment here (I'll have Disqus or similar up "soon")
+
+[^1]: A contentious term, I know! One topic for the backlog :)
