Add new post and clean up earlier posts

--- a/_posts/2020-08-19-hello.md
+++ b/_posts/2020-08-19-hello.md
@@ -9,9 +9,11 @@ Hello, world!
 
 Thank you for visiting my site!
 
-I'm currently working as a software delivery manager [^1], having fully transitioned over from software engineer/architect roles. A "well-seasoned newcomer" to the management side of project delivery, I've now reached the point where I'm finding myself constantly inspired with tough questions (and ocassionally, answers!), and so I've decided to use this blog as a place to nail down all my thoughts, publicly for whoever cares to read them. 
+I'm working as a software delivery manager [^1], having transitioned over from software engineer/architect roles. A "well-seasoned newcomer" to the management side of project delivery, I've now reached the point where I'm finding myself constantly inspired with tough questions (and ocassionally, answers!), and so I've decided to use this blog as a place to nail down all my thoughts, publicly for whoever cares to read them. 
 
 My burning questions typically revolve around *practical* agile/lean project delivery, particularly in the hostile and unforgiving enterprise space.
+
+There is some risk to airing my thoughts openly online, which I hope readers can respect - these are my *raw* thoughts, and I don't consider myself an 'expert'. I'm a practitioner and in the day-to-day fight, so this is my space to reflect, learn, and hopefully grow.
 
 I'm still keeping my software developer spirit close, so expect a few stray technical posts as well.
 
