Change folder for images to allow for header images

--- a/_posts/2020-11-24-todo.md
+++ b/_posts/2020-11-24-todo.md
@@ -4,6 +4,7 @@ title: "My To-Do List"
 date: 2020-11-24 00:00:00 +0000
 tags: [tools]
 comments: true
+image: "todolist.png"
 ---
 
 As I mentioned in my last post, I have been uncomfortably busy these last weeks/months, and so have pulled back on lower-priority activities like this blog. Winter break is coming soon, and along with it a few weeks of rest :)
@@ -12,7 +13,7 @@ When I'm too busy to rely on my memory alone - which, let's be real, is most of 
 
 This little structure here has served me dependably over the past year-or-so, and I expect to continue using it well into the future:
 
-![To-do list screenshot](/static/img/todolist.png)
+![To-do list screenshot](/static/img/posts/todolist.png)
 
 In the following paragraphs, I'll describe how I make use of each section.
 
@@ -69,7 +70,7 @@ Sometimes I move unfinished/unstarted tasks over to the Done pile. This could be
 
 Whenever the Done pile has grown long enough, I select everything in it and drag it into the **Archive**. This means the task disappears from the To-Do list, and can be found again if I click into the Archive:
 
-![To-do list archive](/static/img/archive.png)
+![To-do list archive](/static/img/posts/archive.png)
 
 I don't like deleting tasks. I like having a chronologically-sorted dump of all the tasks I've worked on. I almost never go in here, but it's good for:
 
